Code Review and Code Revision For User Repository

--- a/TNC_API/appsettings.json
+++ b/TNC_API/appsettings.json
@@ -8,6 +8,11 @@
   "ConnectionStrings": {
     "DatabaseConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=\"C:\\Program Files\\Microsoft SQL Server\\MSSQL15.MSSQLSERVER\\MSSQL\\DATA\\local_database.mdf\";Integrated Security=True;Connect Timeout=30"
   },
+  "SecuritySettings": {
+    "NumberOfSalt": 16,
+    "NumberOfIterations": 10000,
+    "DefaultPassword": "1sttn2021"
+  },
   "Jwt": {
     "Key": "tJlskfjNNVfh232Us!22@fJfljlgJm4775dKJSHDkjH",
     "Issuer": "JWTAuthenticationServer",
