Updated UserRepository and other files

--- a/TNC_API/appsettings.json
+++ b/TNC_API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DatabaseConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=\"C:\\Program Files\\Microsoft SQL Server\\MSSQL15.MSSQLSERVER\\MSSQL\\DATA\\local_database.mdf\";Integrated Security=True;Connect Timeout=30"
+    //"DatabaseConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=\"C:\\Program Files\\Microsoft SQL Server\\MSSQL15.MSSQLSERVER\\MSSQL\\DATA\\local_database.mdf\";Integrated Security=True;Connect Timeout=30",
+    "DatabaseConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\Tatau\\OneDrive\\Documents\\ApiDatabase.mdf;Integrated Security=True;Connect Timeout=30"
   },
   "SecuritySettings": {
     "NumberOfSalt": 16,
